--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "dependencies": {},
   "devDependencies": {
       "gulp": "~3.8.11",
-      "gulp-concat": "*",
-      "gulp-typescript": "~2.4.2",
-      "gulp-tsc": "*",
+      "gulp-concat": "~2.5.2",
+      "gulp-gh-pages": "~0.5.0",
+      "gulp-typescript": "~2.5.0",
+      "gulp-tsc": "~0.9.3",
       "merge2": "~0.3.1"
   }
 }
