--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "gulp": "~3.8.11",
       "gulp-concat": "~2.5.2",
       "gulp-gh-pages": "~0.5.0",
+      "gulp-tslint": "~2.0.0",
       "gulp-jasmine-phantom": "^1.1.2",
       "gulp-typescript": "~2.6.0",
       "gulp-tsc": "~0.9.3",
